--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="section-head">
 					     <h2 class="section-heading">Bride & Groom</h2>
 					     <div class="bottom-dash"></div>
-						 <p class="section-subheading text-muted">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+						 <p class="section-subheading text-muted">We are priviledge to invite you for our wedding</p>
 				   </div><!-- section-head -->
                 </div><!-- col-lg-12 -->
             </div><!-- row -->
@@ -133,7 +133,7 @@
 					<div class="br_grm">
 						<div class="brd_grm_wrap">
 							<div class="brd_grm_img">
-							     <img src="img/placehold/bride-grm4.png" class="img-circle"  alt="Bride" />
+							     <img src="img/bride.JPG" class="img-circle"  alt="Bride" />
 								 <div class="brgm_overlay">
 								    <a class="br_gr_zoom" href="#myModal1" data-toggle="modal">
 										<img src="img/zoom.png" alt="zoom img" />
@@ -155,7 +155,7 @@ perspiciatis.</p>
 				    <div class="br_grm">
 						<div class="brd_grm_wrap">
 							<div class="brd_grm_img">
-							    <img src="img/placehold/bride-grm4.png" class="img-circle" alt="Groom" />
+							    <img src="img/groom.JPG" class="img-circle" alt="Groom" />
 								<div class="brgm_overlay">
 									<a class="br_gr_zoom" href="#myModal2" data-toggle="modal">
 										<img src="img/zoom.png" alt="" />
@@ -163,7 +163,7 @@ perspiciatis.</p>
 								</div><!-- brgm_overlay -->
 							</div><!-- brd_grm_img -->
 						</div><!-- brd_grm_wrap -->
-						<h3>Jhon doe</h3>
+						<h3>Suraj Janere</h3>
 						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Sed ut perspiciatis.</p>
                         <p class="social_icons">
 							 <a href="#"><i class="fa fa-twitter"></i></a>
@@ -345,180 +345,7 @@ perspiciatis.</p>
 	<!--Parallex section 2-->
 	<div class="img-holder" data-image="img/placehold/parallex2.png" data-width="2616" data-height="1553"></div>
 	<!--Parallex section 2 End-->
-	
-	<!--Our Family section-->
-	<section id="family" class="wedding-sec family_sec">
-		<div class="container">
-		     <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="section-head">
-						 <h2 class="section-heading">Our Family </h2>
-						 <div class="bottom-dash"></div>
-						 <p class="section-subheading text-muted">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				    </div><!-- .section-head -->
-                </div><!-- .col-lg-12 -->
-            </div><!-- .row -->
-		</div><!-- .container -->
-			
-		<div class="family_member_wrap four">
-			<div class="container">
-			    <div class="row">
-					<!-- col-lg-12 -->
-					<div role="tabpanel" class="family_tab_4">
-					  <!-- Nav tabs -->
-						<ul class="nav nav-tabs" role="tablist">
-							<li role="presentation" class="active"><a href="#family1" aria-controls="home" role="tab" data-toggle="tab">Bride Family</a></li>
-							<li role="presentation"><a href="#family2" aria-controls="profile" role="tab" data-toggle="tab">Groom Family</a></li>
-						</ul>
-						<!-- Tab panes -->
-						<div class="tab-content">
-							<div role="tabpanel" class="tab-pane fade in active" id="family1">
-								<div class="col-lg-3 col-md-3 col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="Father" />
-											 <div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											</div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">father</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									 </div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 
-								<div class="col-lg-3 col-md-3  col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="Mother" />
-											 <div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											</div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">mother</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									</div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 
-								<div class="col-lg-3 col-md-3  col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="Brother" />
-											 <div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											</div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">brother</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									</div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 
-								<div class="col-lg-3 col-md-3  col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="Sister" />
-											 <div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											 </div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">sister</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									</div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 	
-							</div>
-							<div role="tabpanel" class="tab-pane fade" id="family2">
-								<div class="col-lg-3 col-md-3  col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="Father" />
-											 <div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											 </div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">father</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									</div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 
-								<div class="col-lg-3 col-md-3  col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="" />
-											<div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											</div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">mother</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									</div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 
-								<div class="col-lg-3 col-md-3  col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="" />
-											 <div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											 </div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">brother</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									</div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 
-								<div class="col-lg-3 col-md-3  col-sm-6">
-									<div class="family_mem_wrap">
-										<div class="family_mem_img">
-											 <img src="img/placehold/family-mem-4.png" class="img-circle" alt="" />
-											 <div class="brgm_overlay">
-												<p class="social_icons">
-													 <a href="#"><i class="fa fa-twitter"></i></a>
-													 <a href="#"><i class="fa fa-linkedin"></i></a>
-													 <a href="#"><i class="fa fa-facebook"></i></a>
-												</p> 	 
-											</div><!-- .brgm_overlay -->
-										</div><!-- .family_mem_img -->
-										 <h3>Suraj Janere</h3>
-										 <p class="relation">sister</p>
-										 <p class="family_txt_details">Nemo enim ipsam voluptatem quia voluptas sit.</p>
-									</div><!-- .family_mem_wrap -->
-								</div><!-- .col-lg-3 .col-md-3 .col-sm-6 --> 
-							</div><!-- #family2 .tab-pane -->
-						</div><!-- .tab-content -->
-					</div><!-- .family_tab_4 -->
-			     </div><!-- .row -->
-		     </div><!-- .container -->
-		</div><!--.family_member_wrap.four-->
-	</section>
-	<!--Our Family section End-->
+
 	
 	<!--Our Photo Gallery section-->
 	<section id="photo_gallery" class="wedding-sec photo_gallery_sec">
