--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                 <ul class="nav navbar-nav navbar-right main_nav">
 					<li> <a href="#page-top">Home</a> </li>
                     <li> <a href="#bride_groom_sec">Bride & Groom</a> </li>
-					<li> <a href="#family">Our Family</a> </li>
-					<li> <a href="#photo_gallery">Photo Gallery</a> </li>
+					<!-- <li> <a href="#family">Our Family</a> </li> -->
+					<li> <a href="#photo_gallery">Prewedding and Engagment Gallery</a> </li>
                     <li> <a href="#events">Events</a> </li>
-                    <li> <a href="#blog">Blog</a> </li>
-                    <li> <a href="#rsvp">RSVP</a> </li>
+                    <!-- <li> <a href="#blog">Blog</a> </li> -->
+                    <!-- <li> <a href="#rsvp">RSVP</a> </li> -->
                 </ul>
             </div><!-- /.navbar-collapse -->
             <!-- /.navbar-collapse -->
@@ -87,9 +87,9 @@
 		 <div class="container-fluid">
             <div class="row">
 			    <section id="main-slider" class="main-slider">
-					<div class="ss-slides slides">
+					<div class="ss-slides">
 						<video autoplay loop class="ss-slide" muted plays-inline>
-							<source src="img/background_small.mp4" type="video/mp4">
+							<source src="img/background2.mp4" type="video/mp4">
 						  </video>
 						<!-- <div class="ss-slide">
 							<img src="img/placehold/slider.png" alt="Couple"/>
@@ -156,8 +156,7 @@
 							</div><!-- brd_grm_img -->
 						</div><!-- brd_grm_wrap -->
 						<h3>Apeksha Sable</h3>
-						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Sed ut 
-perspiciatis.</p>
+						<!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Sed ut perspiciatis.</p> -->
                         <p class="social_icons">
 							 <a href="https://instagram.com/apeksha_sable"><i class="fa fa-instagram"></i></a>
 						</p>
@@ -176,7 +175,7 @@ perspiciatis.</p>
 							</div><!-- brd_grm_img -->
 						</div><!-- brd_grm_wrap -->
 						<h3>Suraj Janere</h3>
-						<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Sed ut perspiciatis.</p>
+						<!-- <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est. Sed ut perspiciatis.</p> -->
                         <p class="social_icons">
 							 <a href="https://instagram.com/sailor_sj16"><i class="fa fa-instagram"></i></a>
 						</p>
@@ -189,7 +188,7 @@ perspiciatis.</p>
 	<!--Bride Groom Section End-->
 	
 	<!--Parallex Section One-->
-	<div class="img-holder" data-image="img/placehold/parallex1.png" data-width="1400" data-height="1122"></div>
+	<div class="img-holder" data-image="img/parallelx.JPG" data-width="1400" data-height="1122"></div>
 	<!--Parallex Section One End-->
 	
 
@@ -203,7 +202,7 @@ perspiciatis.</p>
                      <div class="section-head">
 					 <h2 class="section-heading">Love Story</h2>
 					 <div class="bottom-dash"></div>
-					 <p class="section-subheading text-muted">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					 <p class="section-subheading text-muted">Major events</p>
 				     </div><!-- section-head -->
                 </div><!-- col-lg-12 -->
             </div><!-- row -->	
@@ -220,26 +219,26 @@ perspiciatis.</p>
 								</div>
 								<div class="timeline-panel right-panel">
 									<div class="timeline-heading">
-										<p class="posting_date">December 19,2012</p> 
-										<h3>Day we meet each other</h3>
+										<p class="posting_date">21st November 2021</p> 
+										<h3>The day it was made offical</h3>
 									</div>
 									<div class="timeline-body">
 										<div class="timeline_img">
-											 <img src="img/placehold/timeline.png" alt="Couple first meet" />
-											 <div class="overlay_tml">
+											 <img src="img/tila.jpg" alt="Couple first meet" />
+											 <!-- <div class="overlay_tml">
 												<div class="overlay_text">
 													<div class="inner-extra">
 														 <a href="img/two/image1.png" data-gal="prettyPhoto"><img src="img/zoom.png" alt="" /></a>
-														 <p>Day we meet each other</p>
+														 <p>The day it was made offical</p>
 													</div>
 												</div>
-											</div><!-- .overlay_tml -->
+											</div>.overlay_tml -->
 										 </div>
 									</div>
 								</div>
 								
 							</li>
-							<li class="left">
+							<!-- <li class="left">
 								<div class="timeline-image">
 									<img class="img-circle img-responsive" src="img/timeline/kiss.png" alt="Couple first kiss">
 								</div>
@@ -258,12 +257,12 @@ perspiciatis.</p>
 														 <p>Our first kiss</p>
 													</div>
 												</div>
-											</div><!-- .overlay_tml -->
-										 </div>
+											</div> .overlay_tml -->
+										 <!-- </div>
 									</div>
 								</div>
-							</li>
-							<li class="timeline-inverted right">
+							</li> -->
+							<!-- <li class="timeline-inverted right">
 								<div class="timeline-image">
 									<img class="img-circle img-responsive" src="img/timeline/trip.png" alt="Couple first holiday trip">
 								</div>
@@ -282,36 +281,36 @@ perspiciatis.</p>
 														 <p>our holiday trip</p>
 													</div>
 												</div>
-											</div><!-- .overlay_tml -->
+											</div>.overlay_tml
 										 </div>
 									</div>
 								</div>
-							</li>
+							</li>  -->
 							<li class="left">
 								<div class="timeline-image">
 									<img class="img-circle img-responsive" src="img/timeline/engage.png" alt="Couple get engaged">
 								</div>
 								<div class="timeline-panel left-panel">
 									<div class="timeline-heading">
-										 <p class="posting_date">january 19,2013</p>  
+										 <p class="posting_date">20th March 2022</p>  
 										<h3>get engaged</h3>
 									</div>
 									<div class="timeline-body">
 										<div class="timeline_img">
-											 <img src="img/placehold/timeline.png" alt="Couple get engaged" />	
-											  <div class="overlay_tml">
+											 <img src="img/engagement.JPG" alt="Couple get engaged" />	
+											  <!-- <div class="overlay_tml">
 												<div class="overlay_text">
 													<div class="inner-extra">
 														 <a href="img/two/image4.png" data-gal="prettyPhoto"><img src="img/zoom.png" alt="" /></a>
 														 <p>get engaged</p>
 													</div>
 												</div>
-											</div><!-- .overlay_tml -->
+											</div>.overlay_tml -->
 										 </div>
 									</div>
 								</div>
 							</li>
-							<li class="timeline-inverted right">
+							<!-- <li class="timeline-inverted right">
 								<div class="timeline-image">
 									<img class="img-circle img-responsive" src="img/timeline/pregnant.png" alt="">
 								</div>
@@ -330,11 +329,11 @@ perspiciatis.</p>
 														 <p>Baby coming soon</p>
 													</div>
 												</div>
-											</div><!-- .overlay_tml -->
+											</div>
 										 </div>
 									</div>
 								</div>
-							</li>	
+							</li>	 -->
 							<li class="timeline-inverted">
 								<div class="timeline-image more">
 									<a href="#">
@@ -365,13 +364,13 @@ perspiciatis.</p>
 					<div class="section-head">
 						<h2 class="section-heading">Photo Gallery</h2>
 						<div class="bottom-dash"></div>
-						<p class="section-subheading text-muted">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p>
+						<!-- <p class="section-subheading text-muted">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </p> -->
 				    </div>   
 				</div><!-- .col-lg-12 -->
             </div><!-- .row -->	 
 	    </div><!-- .container -->
 		<div class="container-fluid">
-			<div class="row">
+			<!-- <div class="row">
 			    <div class="col-md-12">   
 					<div class="controls">
 						<div class="control-group gallery-nav two">
@@ -382,10 +381,9 @@ perspiciatis.</p>
 						</div>
 					</div>		
 			    </div>
-			</div>	
-
-			<iframe src="https://drive.google.com/file/d/1ht0lu8s_DTC9XCQzGmL8wD58tz0pyeLb/preview" width="640" height="480" allow="autoplay"></iframe>
-
+			</div>	 -->
+			<h2>Prewedding shoot</h2>
+			<iframe src="https://drive.google.com/file/d/1ht0lu8s_DTC9XCQzGmL8wD58tz0pyeLb/preview" width="360" height="480" allow="autoplay"></iframe>
 			<div id="photo-container" class="row photo-container">
 				<div class="mix wday Graphics">
 					<img src="img/placehold/gallery-img-sml.png" alt="" />
