--- a/index.html
+++ b/index.html
@@ -516,14 +516,13 @@
 								<div class="card front evnt_prt evnt_prt_2">
 									<h2>Wedding Ceremony</h2>
 									<img src="img/marriage_timeline.jpg" alt="" />
-									<p>Lonavala, Pune</p>
+									<p>Sancheti Lawns, Lonavala, Pune</p>
 									<button class="btn btn-primary btn_evnt">6:04PM</button>
 								</div><!--.card .front .evnt_prt .evnt_prt_2-->
 								<div class="card back evnt_prt_back evnt_prt_back_2">
 									<h2>I am marrying my dearest one..</h2>
 									 <div class="evnt_addres">
-										 <p>Sancheti Lawns</p>
-										 <p>Lonavala</p>
+										 <p>We will be waiting for your presence</p>
 										 <!-- <p>Saturday, 20 july 2015</p>
 										 <p>4:30PM - 6:15PM</p> -->
 									 </div>
