--- a/index.html
+++ b/index.html
@@ -502,9 +502,9 @@
 		    <div class="row">
                 <div class="col-lg-12 text-center">
                     <div class="section-head">
-					<h2 class="section-heading">The D day </h2>
+					<h2 class="section-heading">The wedding day </h2>
 					<div class="bottom-dash"></div>
-						<p class="section-subheading text-muted"> I am marrying my dearest one, my life partner but you are my closet one. I need your company, without you it couldn't be a journey worth remembering</p>
+						<p class="section-subheading text-muted"> I am marrying my dearest one, my life partner but you are my closest one. I need your company, without you it wouldn't be a journey worth remembering</p>
 				   </div><!--.section-head-->
                 </div><!--.col-lg-12-->
             </div><!--.row-->
