--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <div class="section-head">
 					     <h2 class="section-heading">Bride & Groom</h2>
 					     <div class="bottom-dash"></div>
-						 <p class="section-subheading text-muted">Together with our families, we are priviledge to invite you to our wedding ceremony</p>
+						 <p class="section-subheading text-muted">Together with our families, we are privileged to invite you to our wedding ceremony</p>
 				   </div><!-- section-head -->
                 </div><!-- col-lg-12 -->
             </div><!-- row -->
